--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <span class="navbar-brand mb-0 h1">Infinity Library</span>
                    <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#myModal">
-        Launch demo modal
+        Add New Book
       </button>
       
         </nav>
@@ -37,17 +37,30 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Add New Book</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-              ...
+                <form class= "form">
+                    <div class="form-group">
+                        <label for="author">Author</label>
+                        <input type="text" class="form-control" id="author" placeholder="Enter Author">
+                    </div>
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <input type="text" class="form-control" id="title" placeholder="Enter Book Title">
+                    </div>
+                    <div class="form-group">
+                            <label for="title">NumberofPages</label>
+                            <input type="text" class="form-control" id="NumberofPages" placeholder="Enter Number of pages">
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary">Add Book</button>
             </div>
           </div>
         </div>
